; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_server_deactivate.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_server_deactivate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_server = type { i32, i32 }

@rpc_status_disconnected = common dso_local global i32 0, align 4
@precise_now = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_server*)* @rpc_server_deactivate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rpc_server_deactivate(%struct.rpc_server* %0) #0 {
  %2 = alloca %struct.rpc_server*, align 8
  store %struct.rpc_server* %0, %struct.rpc_server** %2, align 8
  %3 = load %struct.rpc_server*, %struct.rpc_server** %2, align 8
  %4 = call i32 @rpc_server_disconnect(%struct.rpc_server* %3)
  %5 = load %struct.rpc_server*, %struct.rpc_server** %2, align 8
  %6 = call i32 @rpc_server_clean(%struct.rpc_server* %5)
  %7 = load i32, i32* @rpc_status_disconnected, align 4
  %8 = load %struct.rpc_server*, %struct.rpc_server** %2, align 8
  %9 = getelementptr inbounds %struct.rpc_server, %struct.rpc_server* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = call i32 (...) @update_precise_now()
  %11 = load i32, i32* @precise_now, align 4
  %12 = load %struct.rpc_server*, %struct.rpc_server** %2, align 8
  %13 = getelementptr inbounds %struct.rpc_server, %struct.rpc_server* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  ret void
}

declare dso_local i32 @rpc_server_disconnect(%struct.rpc_server*) #1

declare dso_local i32 @rpc_server_clean(%struct.rpc_server*) #1

declare dso_local i32 @update_precise_now(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
